--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <title>Callum Begley's Dev Blog</title>
     <meta charset="UTF-8" />
-    <title>React FTW!</title>
-    <link rel="stylesheet" href="./client/styles/main.css">
+    <link href="/client/styles/main.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width" initial-scale="1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik+Glitch&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
     <div id="app"></div>
     <script src="./client/index.tsx" type="module"></script>
-  </body>
 </html>
