fix menu blocking when closed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link href="/client/styles/main.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width" initial-scale="1.0" />
-    <link rel="icon" type="image/x-icon" href="/public/CB.png">
+    <link rel="icon" type="image/x-icon" href="/CB.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
